--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Mark Bennett</h1>
+        <a href="index.html"><h1>Mark Bennett</h1></a>
         <ul>
             <a href="index.html"><li><button class="nav" id="about">About</button></li></a>
             <a href="portfolio.html"><li><button class="nav" id="portfolio">Portfolio</button></li></a>
@@ -18,7 +18,7 @@
     </header>
     <article>
         <h2>About Me</h2>
-        <img src="assets/images/Wedding_suspenders.jpg" width="15%"/>
+        <img id="profilepic" src="assets/images/Wedding_suspenders.jpg" width="15%"/>
         <p>
             I'm a novice web developer based out of Irving, Texas. I will obtain a 
             certificate for the completion of a Full-Stack Web Development 
