--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Mark Bennett</h1>
+        <a href="index.html"><h1>Mark Bennett</h1></a>
         <ul>
             <a href="index.html"><li><button class="nav" id="about">About</button></li></a>
             <a href="portfolio.html"><li><button class="nav" id="portfolio">Portfolio</button></li></a>
@@ -17,9 +17,35 @@
         </ul>
     </header>
     <article>
-        <div class="project">
-            <p>Family Man</p>
-            <img class="projectimg" src="./assets/images/Wife&sis.jpg"/>
+        <div class="row">
+            <div class="column">
+                <div class="project">
+                    <h3>Project 1</h3>
+                    <img src="assets/images/placeimg_640_480_tech.jpg"/>
+                    <p>Desctiption of first project goes here. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, nisi. Rerum impedit doloremque veritatis omnis tempore possimus dignissimos illum laboriosam vel. Doloribus nesciunt expedita impedit deserunt eaque aut rem sapiente!</p>
+                </div>
+            </div>
+            <div class="column">
+                <div class="project">
+                    <h3>Project 2</h3>
+                    <img src="assets/images/tech (1).jpg"/>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam recusandae dolorum dolores aut consectetur, fugiat tempora in? Laboriosam, repellendus repellat provident, earum magni, laudantium iure pariatur facere aut modi beatae!</p>
+                </div>
+            </div>
+            <div class="column">
+                <div class="project">
+                    <h3> Project 3</h3>
+                    <img src="assets/images/tech (2).jpg">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae saepe vero totam veniam ratione consequuntur rerum porro suscipit tenetur deserunt facilis iure, est, recusandae labore delectus unde expedita odio dolore.</p>
+                </div>
+            </div>
+            <div class="column">
+                <div class="project">
+                    <h3>Pet Project</h3>
+                    <img src="assets/images/tech (3).jpg">
+                    <p>Throughout the course I'm going to be building/rebuilding a cumulative project as I learn more and more. Hopefully it turns out to be something special...</p>
+                </div>
+            </div>
         </div>
     </article>
     <footer>
