--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <h1>Mark Bennett</h1>
+    <a href="index.html"><h1>Mark Bennett</h1></a>
     <ul>
         <a href="index.html"><li><button class="nav" id="about">About</button></li></a>
         <a href="portfolio.html"><li><button class="nav" id="portfolio">Portfolio</button></li></a>
@@ -31,7 +31,7 @@
             <textarea></textarea>
         </div>
         <div class="wrapper">
-            <button type="submit">Submit</button>
+            <button id ="submit" type="submit">Submit</button>
         </div>
 
     </article>
