pushing project to io

--- a/index.html
+++ b/index.html
@@ -1,55 +1,69 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-us">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Me</title>
-    <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>About | Mark Bennett</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-    <header>
-        <a href="index.html"><h1>Mark Bennett</h1></a>
-        <ul>
-            <a href="index.html"><li><button class="nav" id="about">About</button></li></a>
-            <a href="portfolio.html"><li><button class="nav" id="portfolio">Portfolio</button></li></a>
-            <a href="contact.html"><li><button class="nav" id="contact">Contact</button></li></a>
-        </ul>
-    </header>
-    <article>
-        <h2>About Me</h2>
-        <img id="profilepic" src="assets/images/Wedding_suspenders.jpg" width="15%"/>
-        <p>
-            I'm a novice web developer based out of Irving, Texas. I will obtain a 
-            certificate for the completion of a Full-Stack Web Development 
-            course offered by SMU in December 2018, proving that I have what 
-            it takes to be a fully-fledged Junior Developer. I will then receive 
-            an offer of employment as a Junior Developer with TEKsystems and work 
-            out of their office here in Irving, Texas. I'd like to work on App Development, 
-            but of course, that may change as I grow and learn throughout the Boot Camp 
-            experience. I might find myself learning something that really speaks to me 
-            as a proffessional, and follow that skill down a career path.
-        </p>
-        <p>
-            I have a little self-taught experience that's been helping me get through 
-            the boot camp so far. While working as a security guard, I downloaded the SoloLearn 
-            app for iPhone, and began teaching myself how to use HTML and CSS. I figured if I was 
-            going to be paid to sit at a desk for 8 hours per day, I might as well fight off the 
-            boredom and do something productive at the same time. After learning a bit of each 
-            language, I would practice developing webpages from scratch on Notepad documents, which 
-            was MUCH more difficult than using an IDE like VS Code!
-        </p>
-        <p>
-            I also have previous programming experience as a student at DeVry University. There, I 
-            studied C++ for nearly 2 years. Although we won't be going over C++ in our Boot Camp, the 
-            skills that I learned there have already paid off in the Boot Camp. I learned a lot about 
-            the logic that goes into programming, how the computer reads your code, and might prioritize 
-            one command over others, and the game logic I learned helped me greatly in the Scratch game 
-            project in the pre-work. 
-        </p>
-    </article>
-    <footer>
-        Copyright &copy
-    </footer>
+
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Mark Bennett</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>  
+    </div>
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+
+      <img src="assets/images/Wedding_suspenders.jpg" class="auth-image" alt="Mark Bennett">
+
+      <p>
+        I'm a novice web developer based out of Irving, Texas. I will obtain a
+        certificate for the completion of a Full-Stack Web Development
+        course offered by SMU in December 2018, proving that I have what
+        it takes to be a fully-fledged Junior Developer. I will then receive
+        an offer of employment as a Junior Developer with TEKsystems and work
+        out of their office here in Irving, Texas. I'd like to work on App Development,
+        but of course, that may change as I grow and learn throughout the Boot Camp
+        experience. I might find myself learning something that really speaks to me
+        as a proffessional, and follow that skill down a career path.
+      </p>
+      <p>
+        I have a little self-taught experience that's been helping me get through
+        the boot camp so far. While working as a security guard, I downloaded the SoloLearn
+        app for iPhone, and began teaching myself how to use HTML and CSS. I figured if I was
+        going to be paid to sit at a desk for 8 hours per day, I might as well fight off the
+        boredom and do something productive at the same time. After learning a bit of each
+        language, I would practice developing webpages from scratch on Notepad documents, which
+        was MUCH more difficult than using an IDE like VS Code!
+      </p>
+      <p>
+        I also have previous programming experience as a student at DeVry University. There, I
+        studied C++ for nearly 2 years. Although we won't be going over C++ in our Boot Camp, the
+        skills that I learned there have already paid off in the Boot Camp. I learned a lot about
+        the logic that goes into programming, how the computer reads your code, and might prioritize
+        one command over others, and the game logic I learned helped me greatly in the Scratch game
+        project in the pre-work.
+      </p>
+
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
 </body>
+
 </html>
