--- a/portfolio.html
+++ b/portfolio.html
@@ -1,55 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-us">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio!</title>
-    <link type="text/css" rel="stylesheet" href="./assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Portfolio | Mark Bennett</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-    <header>
-        <a href="index.html"><h1>Mark Bennett</h1></a>
-        <ul>
-            <a href="index.html"><li><button class="nav" id="about">About</button></li></a>
-            <a href="portfolio.html"><li><button class="nav" id="portfolio">Portfolio</button></li></a>
-            <a href="contact.html"><li><button class="nav" id="contact">Contact</button></li></a>
-        </ul>
-    </header>
-    <article>
-        <div class="row">
-            <div class="column">
-                <div class="project">
-                    <h3>Project 1</h3>
-                    <img src="assets/images/placeimg_640_480_tech.jpg"/>
-                    <p>Desctiption of first project goes here. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, nisi. Rerum impedit doloremque veritatis omnis tempore possimus dignissimos illum laboriosam vel. Doloribus nesciunt expedita impedit deserunt eaque aut rem sapiente!</p>
-                </div>
-            </div>
-            <div class="column">
-                <div class="project">
-                    <h3>Project 2</h3>
-                    <img src="assets/images/tech (1).jpg"/>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam recusandae dolorum dolores aut consectetur, fugiat tempora in? Laboriosam, repellendus repellat provident, earum magni, laudantium iure pariatur facere aut modi beatae!</p>
-                </div>
-            </div>
-            <div class="column">
-                <div class="project">
-                    <h3> Project 3</h3>
-                    <img src="assets/images/tech (2).jpg">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae saepe vero totam veniam ratione consequuntur rerum porro suscipit tenetur deserunt facilis iure, est, recusandae labore delectus unde expedita odio dolore.</p>
-                </div>
-            </div>
-            <div class="column">
-                <div class="project">
-                    <h3>Pet Project</h3>
-                    <img src="assets/images/tech (3).jpg">
-                    <p>Throughout the course I'm going to be building/rebuilding a cumulative project as I learn more and more. Hopefully it turns out to be something special...</p>
-                </div>
-            </div>
-        </div>
-    </article>
-    <footer>
-        Copyright &copy
-    </footer>
+
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Mark Bennett</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Portfolio</h1>
+
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+        
+        <h3>Word Guess</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+
+        <h3>RPG Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+
+        <h3>Trivia Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+
+        <h3>Rutgers Info Widget</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+
+        <h3>Rock Paper Scissors</h3>
+      </div>
+
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
 </body>
+
 </html>
