--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,9 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <a href="https://mbennett5516.github.io/Stock-search-app"><img src="./assets/images/stock-info.jpg" alt="Stock Search App">
+        <a href="https://mbennett5516.github.io/Stock-search-app" target="_blank"><img src="./assets/images/stock-info.jpg" alt="Stock Search App"></a>
         
-        <h3>Stock Info App</h3>
+        <a href="https://mbennett5516.github.io/Stock-search-app" target="_blank"><h3>Stock Info App</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
