added Liri app to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,14 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <a href="https://mbennett5516.github.io/Stock-search-app" target="_blank"><img src="./assets/images/stock-info.jpg" alt="Stock Search App"></a>
+        <a href="https://mbennett5516.github.io/Stock-search-app/" target="_blank"><img src="./assets/images/stock-info.jpg" alt="Stock Search App"></a>
         
-        <a href="https://mbennett5516.github.io/Stock-search-app" target="_blank"><h3>Stock Info App</h3></a>
+        <a href="https://mbennett5516.github.io/Stock-search-app/" target="_blank"><h3>Stock Info App</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <a href="https://github.com/mbennett5516/liri-node-app" target="_blank"><img src="./assets/images/liri.png" alt="LIRI App"></a>
 
-        <h3>RPG Game</h3>
+        <a href="https://github.com/mbennett5516/liri-node-app" target="_blank"><h3>LIRI App</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
