Updated 'about' page

--- a/index.html
+++ b/index.html
@@ -28,32 +28,21 @@
       <img src="assets/images/Wedding_suspenders.jpg" class="auth-image" alt="Mark Bennett">
 
       <p>
-        I'm a novice web developer based out of Irving, Texas. I will obtain a
-        certificate for the completion of a Full-Stack Web Development
-        course offered by SMU in December 2018, proving that I have what
-        it takes to be a fully-fledged Junior Developer. I will then receive
-        an offer of employment as a Junior Developer with TEKsystems and work
-        out of their office here in Irving, Texas. I'd like to work on App Development,
-        but of course, that may change as I grow and learn throughout the Boot Camp
-        experience. I might find myself learning something that really speaks to me
-        as a proffessional, and follow that skill down a career path.
+        I'm a Full-Stack Developer living in the Dallas, TX area. I studied Full MERN Stack Web 
+        Development through the SMU Bootcamp program. I graduated in December 2018 and since 
+        January, I have been working as a Junior Developer at TEKsystems and adding to my skill set.
       </p>
       <p>
-        I have a little self-taught experience that's been helping me get through
-        the boot camp so far. While working as a security guard, I downloaded the SoloLearn
-        app for iPhone, and began teaching myself how to use HTML and CSS. I figured if I was
-        going to be paid to sit at a desk for 8 hours per day, I might as well fight off the
-        boredom and do something productive at the same time. After learning a bit of each
-        language, I would practice developing webpages from scratch on Notepad documents, which
-        was MUCH more difficult than using an IDE like VS Code!
+        Since being hired at TEKsystems as a full-time contractor, I have begun to focus my skills more on 
+        back-end development. I have learned core Java, object-oriented programming and design principles, 
+        and the Spring 5 framework. I am currently studying for the Oracle Java 8 certification exam.
       </p>
       <p>
         I also have previous programming experience as a student at DeVry University. There, I
-        studied C++ for nearly 2 years. Although we won't be going over C++ in our Boot Camp, the
-        skills that I learned there have already paid off in the Boot Camp. I learned a lot about
-        the logic that goes into programming, how the computer reads your code, and might prioritize
-        one command over others, and the game logic I learned helped me greatly in the Scratch game
-        project in the pre-work.
+        studied C++ for nearly 2 years. Although I haven't used C++ in several years, the
+        skills that I learned there have helped me become more proficient in back-end programming more 
+        quickly than my peers. I learned a lot about the logic that goes into programming, how the computer 
+        decipers code, and might prioritize one command over others, and basic Computer Science lessons.
       </p>
 
     </section>
