--- a/portfolio.html
+++ b/portfolio.html
@@ -36,9 +36,9 @@
         <a href="https://github.com/mbennett5516/liri-node-app" target="_blank"><h3>LIRI App</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <a href="https://github.com/mbennett5516/MobileAppWebService" target="_blank"><img src="assets/images/spring.png" alt="Java/Spring Back-End with Spring Security"></a>
 
-        <h3>Trivia Game</h3>
+        <a href="https://github.com/mbennett5516/MobileAppWebService" target="_blank"><h3>Java/Spring Back-End with Spring Security</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
