added github link

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy; 
+      <a href="https://github.com/mbennett5516" target="_blank">My personal GitHub Account </a>Copyright &copy; 
     </div>
   </footer>
 </body>
