--- a/portfolio.html
+++ b/portfolio.html
@@ -41,9 +41,9 @@
         <a href="https://github.com/mbennett5516/MobileAppWebService" target="_blank"><h3>Java/Spring Back-End with Spring Security</h3></a>
       </div>
       <div class="work">
-        <a href="https://mbennett5516.github.io/CapitalIdea/" target="_blank"><img src="assets/images/technics-q-c-640-480-7.jpg" alt="CapitalIdea"></a>
+        <a href="https://github.com/mbennett5516/CapitalIdea/" target="_blank"><img src="assets/images/technics-q-c-640-480-7.jpg" alt="CapitalIdea"></a>
 
-        <a href="https://mbennett5516.github.io/CapitalIdea/" target="_blank"><h3>Capital Idea (basic budget app)</h3></a>
+        <a href="https://github.com/mbennett5516/CapitalIdea/" target="_blank"><h3>Capital Idea (basic budget app)</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
