added github to menu

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
-        <a href="http://github.com/mbennett5516/">GitHub</a>
+        <a href="http://github.com/mbennett5516/" target="_blank">GitHub</a>
       </nav>  
     </div>
   </header>
